--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "helmet": "^8.1.0",
     "mongoose": "^8.14.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "zod": "^3.24.4"
   }
 }
