--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ NODE_ENV=dev #production
 
 DB_URL=mongodb://localhost:27017/db
 URL=http://localhost
+FRONTEND_URL=http://localhost:4200/
 PORT=3000
 
 MIN_PASSWORD_LENGTH=5
