--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,7 @@
 FROM mongo
 
-EXPOSE 27017
+COPY mongo-dump /dump
+
+RUN mongod --fork --logpath /var/log/mongod.log \
+  && mongorestore --db db /dump/db \
+  && mongod --shutdown
